cli/tests/snapshot/snapshots/snapshot__eval_stderr_let_block_with_pat.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: destructuring patterns are not currently permitted in let blocks
  ┌─ [INPUTS_PATH]/errors/let_block_with_pat.ncl:5:3
  │
5 │   { b } = { b = 1 }
  │   ^^^^^
  │
  = Try re-writing your let block as nested `let ... in` expressions.
